--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lightningcss-linux-x64-gnu": "^1.29.1"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/postcss": "^4.0.14",
         "tailwindcss": "^4.0.14"
     }
